fixed basic log page view to align with rest of the app

--- a/frontend/src/styles/logs.css
+++ b/frontend/src/styles/logs.css
@@ -1,9 +1,9 @@
-.logs-page-root {
+/* .logs-page-root {
   width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-}
+} */
 
 .logs-pagination-container {
   margin-top: auto;
@@ -15,6 +15,8 @@
   bottom: 0;
   z-index: 10;
   padding: 1rem 0 0.5rem 0;
+  margin-top: 24px; 
+  gap: 12px;
   /* background: #fff; */
 }
 
@@ -46,8 +48,8 @@
 }
 
 .demo-table-container {
-  width: 93%;
-  height: 30rem;
+  width: 100%;
+  height: 25rem;
   line-height: 1.2 !important
 }
 
@@ -60,9 +62,9 @@
 
 .search{
   /* min-width: 280px; */
-  flex: 2 1 280px;
+  flex: 2 1 200px;
   min-width: 10px  !important;
-  max-width: 300px  !important;
+  max-width: 265px  !important;
 }
 
 .dropdown {
@@ -143,7 +145,7 @@
 
 .export-wrapper {
   position: relative;
-  margin-right: 2.5rem;
+  margin-right: 0.01rem;
   min-height: 3rem;
 }
 
